fee (26/05/02)
------------------
 + updated CharProfileStruct

fee  (25/05/02)
------------------
 + updated Tenebrous.map
 + updated Acrylia.map
 + updated Griegsend.map (thanks Morannon)
 + updated Nektulos.map (thanks Mr. Suspicious)

dohpaZ (24/05/02)
------------------
Modifications:
 + version 4.2.6
 + Applied patch# 559953 "Update to Group Packet Structures" 
   by Bonkers D Bobcat (bonkersbobcat)
 + Applied patch# 560200 "Bodytype display" by wyvern (mvern)
 + Fixed some g++ 3.1 compilation issues.  g++ 3.1 is now officially supported
   and despite some previous reports it DOES work with the libEQ.a that was
   compiled with g++ 3.0.x.  However, in order to compile ShowEQ with g++ 3.1 
   your installation of Qt MUST be compiled with g++ 3.1 due to ABI 
   compatibility issues between the compiler versions
 + Added the COPYING file that contains the GNU Public licence version 2 under
   which ShowEQ is licensed.
 + Added the ZoneMgr object to unify tracking of zone state information,
   modified the rest of ShowEQ to use it.
 + Made the selected spawn always be visible on the map irregardless of 
   being depth filtering, unknown, or filtered.
 + Added the SINS SpawnMonitor and Spawn Point List to ShowEQ.
 + Added a right-click context menu to the Spawn Point List.
 + Made EQPlayer inherit from the Spawn class as well as the QObject class
   and made the necessary modifications to remove redundancies and fix 
   conflicts.
 + Cleaned up SpawnShell, moved SpawnLogger out of SpawnShell.
 + Cleaned up a bunch of header and source file issues.  Better use of
   forward declarations instead of including unnecessary header files.
 + Made it so windows that have a specific font set keep it after
   interface theme changes.
 + Cleaned up "View" menu checkmark initialization/handling.
 + Made the behavior of when the player is painted on the map more sensible.
 + Added an item to the "Options" menu to "Clear Channel Messages", which 