@@ -1,3 +1,7 @@
+ratt (30 May 02)
+------------------
+Fixed EQTime display (am/pm thing)
+
 fee (26/05/02)
 ------------------
  + updated CharProfileStruct
